maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:3: error: ';' expected but integer literal found.
  var Tx = Array[Int] 4
                      ^JediEscaper:4: error: ';' expected but integer literal found.
  var Ty = Array[Int] 4
                      ^JediEscaper:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  Tx(0) = -1
  ^JediEscaper:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  Tx(1) = -1
  ^JediEscaper:7: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  Tx(2) = -1
  ^JediEscaper:8: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  Tx(3) = -1
  ^JediEscaper:9: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  Ty(0) = -1
  ^JediEscaper:10: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  Ty(1) = -1
  ^JediEscaper:11: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  Ty(2) = -1
  ^JediEscaper:12: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  Ty(3) = -1
  ^JediEscaper:13: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (!aMurNord(x,y) && getIndication(x,y-1)!=9999) {setIndication(x,y-1,k+1),Tx(0)=x;Ty(0)=y-1}
  ^JediEscaper:14: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (!aMurOuest(x,y) && getIndication(x-1,y)!=9999) {setIndication(x-1,y,k+1),Tx(1)=x-1;Ty(1)=y}
  ^JediEscaper:15: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (!aMurNord(x,y+1) && getIndication(x,y+1)!=9999) {setIndication(x,y+1,k+1),Tx(2)=x;Ty(2)=y+1}
  ^JediEscaper:16: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (!aMurOuest(x+1,y) && getIndication(x+1,y)!=9999) {setIndcication(x,y+1,k+1),Tx(3)=x+1;Ty(3)=y}                                                  
  ^JediEscaper:17: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  for (i<-0 to 3) {if (Tx(i)!= -1) {casP(Tx(i),Ty(i),k+1)}}
  ^